# offensive_driver_rust

./: .gitignore  README.md
driver/: Cargo.toml  DriverCertificate.cer  Makefile.toml  start
driver/src/: lib.rs
user/: Cargo.toml
user/src/: main.rs
windows-kernel-build/: Cargo.toml
windows-kernel-build/src/: lib.rs
windows-kernel-rs/: Cargo.toml
windows-kernel-rs/src/: callback.rs  device.rs  ioctl.rs  lib.rs  process.rs  token.rs
windows-kernel-sys/: Cargo.toml  build.rs  rust-toolchain.toml
windows-kernel-sys/src/: auxklib.rs  base.rs  lib.rs  ntoskrnl.rs  wrapper.h  wrapper_auxklib.h
winioctl/: Cargo.toml
winioctl/src/: ioctl.rs
