[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winioctl = { path = "../winioctl" }

[build-dependencies]
static_vcruntime = "2.0"

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
windows-kernel-rs = { path = "../windows-kernel-rs" }

